# unog_bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  interaction.rs  main.rs  sheets.rs  verification.rs
src/interaction/: approve_verification.rs  create_verification_message.rs  show_verification_modal.rs  verification_modal_submit.rs
src/model/: verification.rs
src/verification/: create_verification_message.rs  show_verification_modal.rs  verification_modal_submit.rs
